modified:   .gitignore 	new file:   javascript/bird-watcher/.exercism/config.json 	new file:   javascript/bird-watcher/.exercism/metadata.json 	new file:   javascript/bird-watcher/.gitignore 	new file:   javascript/bird-watcher/HELP.md 	new file:   javascript/bird-watcher/HINTS.md 	new file:   javascript/bird-watcher/LICENSE 	new file:   javascript/bird-watcher/README.md 	new file:   javascript/bird-watcher/bird-watcher.js 	new file:   javascript/bird-watcher/bird-watcher.spec.js 	new file:   javascript/bird-watcher/package.json 	new file:   javascript/change/.exercism/config.json 	new file:   javascript/change/.exercism/metadata.json 	new file:   javascript/change/HELP.md 	new file:   javascript/change/LICENSE 	new file:   javascript/change/README.md 	new file:   javascript/change/change.js 	new file:   javascript/change/change.spec.js 	new file:   javascript/change/package-lock.json 	new file:   javascript/change/package.json 	new file:   javascript/elyses-enchantments/.exercism/config.json 	new file:   javascript/elyses-enchantments/.exercism/metadata.json 	new file:   javascript/elyses-enchantments/.gitignore 	new file:   javascript/elyses-enchantments/HELP.md 	new file:   javascript/elyses-enchantments/HINTS.md 	new file:   javascript/elyses-enchantments/LICENSE 	new file:   javascript/elyses-enchantments/README.md 	new file:   javascript/elyses-enchantments/enchantments.js 	new file:   javascript/elyses-enchantments/enchantments.spec.js 	new file:   javascript/elyses-enchantments/package-lock.json 	new file:   javascript/elyses-enchantments/package.json 	new file:   javascript/mixed-juices/.exercism/config.json 	new file:   javascript/mixed-juices/.exercism/metadata.json 	new file:   javascript/mixed-juices/.gitignore 	new file:   javascript/mixed-juices/HELP.md 	new file:   javascript/mixed-juices/HINTS.md 	new file:   javascript/mixed-juices/LICENSE 	new file:   javascript/mixed-juices/README.md 	new file:   javascript/mixed-juices/mixed-juices.js 	new file:

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 */target
 */node_modules
-*/node_modules/*
+javascript/change/node_modules
+javascript/bird_watcher/node_modules
+.eslintrc
+babel.config.js
+.npmrc
